Style tab buttons and fix spacing

--- a/src/less/components/buttons_area.less
+++ b/src/less/components/buttons_area.less
@@ -19,6 +19,42 @@
 	justify-content: flex-start;
 	align-items: flex-start;
 
+	#buttons-collections-controls {
+		// TODO: make toolbar tab item logic re-useable
+		@margin: 3px;
+		@button-inner-gap: 10px;
+		margin: @margin (@main-radius + 1px) 0;
+
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-start;
+		align-items: flex-start;
+
+		#buttons-collections-tabs {
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-start;
+			align-items: flex-start;
+		}
+
+		& > button.tab-button {
+			margin-left: 50px;
+		}
+
+		button.tab-button {
+			margin: 0;
+			padding: (@margin + 1) @button-inner-gap (@margin - 1);
+			.set-radius(@main-radius @main-radius 0 0);
+
+			background-color: transparent;
+			color: var(--window-fg);
+
+			&:hover, &:focus-visible, &.selected {
+				background-color: var(--buttons-grid-bg);
+			}
+		}
+	}
+
 	#buttons-grids {
 		flex-grow: 1;
 		width: 100%;
